@startuml

title __VIEW's Class Diagram__\n

  namespace com.View {
    class com.View.AdminFrame {
        - buttonName : JButton
        - frame : JFrame
        + AddEditCourseFrame()
        + AddEditInstructorFrame()
        + AddEditModuleFrame()
        + AddEditStudentsGradeFrame()
        + AddStudentResultFrame()
        + AdminFrame()
        + BottomFramePanel()
        + createAdminFrame()
        + editButton()
    }
  }
  

  namespace com.View {
    class com.View.Gui {
        + Gui()
    }
  }
  

  namespace com.View {
    class com.View.InstructorFrame {
        - buttonName : JButton
        + AddInstructorModule()
        + AddProfileFrame()
        + BottomFramePanel()
        + createInstructorFrame()
        + editButton()
    }
  }
  

  namespace com.View {
    class com.View.Login {
        ~ c : Container
        - Users : Object[]
        - frame : JFrame
        - loginBtn : JButton
        - passwordTextField : JPasswordField
        - registerBtn : JButton
        - selectUserType : JComboBox<String>
        - userType : JComboBox
        - userTypes : String[]
        - usernameTextField : JTextField
        + Login()
        + actionPerformed()
    }
  }
  

  namespace com.View {
    class com.View.Register {
        - GetAddress : JTextField
        - GetConfirmPassword : JPasswordField
        - GetEmailAddress : JTextField
        - GetLevel : JComboBox
        - GetName : JTextField
        - GetPassword : JPasswordField
        - Level : Object[]
        - registrationFrame : JFrame
        ~ Register()
        ~ Register()
    }
  }
  

  namespace com.View {
    class com.View.SelectModules {
        ~ rowData : String[][]
        - columnNames : Object[]
        - frame : JFrame
        + SelectModules()
    }
  }
  

  namespace com.View {
    class com.View.StudentFrame {
        - buttonName : JButton
        + AddModuleDetailFrame()
        + AddModuleEnrolledFrame()
        + AddProfileFrame()
        + BottomFramePanel()
        + createStudentFrame()
        + editButton()
    }
  }
  

  namespace com.View {
    class com.View.UserType {
        - InstructorID : int
        - instructor : JRadioButton
        - next : JButton
        - student : JRadioButton
        + actionPerformed()
        ~ UserType()
    }
  }
  

  com.View.AdminFrame -up-|> javax.swing.JFrame
  com.View.AdminFrame o-- com.Model.Courses.Course : course
  com.View.AdminFrame o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.AdminFrame o-- com.Model.Courses.Module : module
  com.View.InstructorFrame -up-|> javax.swing.JFrame
  com.View.Login .up.|> java.awt.event.ActionListener
  com.View.Login -up-|> javax.swing.JFrame
  com.View.Register -up-|> javax.swing.JFrame
  com.View.Register o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.Register o-- com.Model.MainBody.Users : users
  com.View.SelectModules -up-|> javax.swing.JFrame
  com.View.SelectModules o-- com.Controller.ManageDbUtils : manageDbUtils
  com.View.SelectModules o-- com.Model.Courses.Module : module
  com.View.StudentFrame -up-|> javax.swing.JFrame
  com.View.UserType .up.|> java.awt.event.ActionListener
  com.View.UserType -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
